Fixes spacing issues on li in articles.

--- a/static/_sass/_custom.scss
+++ b/static/_sass/_custom.scss
@@ -1363,19 +1363,19 @@ article {
   }
   ul:nth-of-type(2) {
     li:nth-of-type(1) {
-      width: 9.1% * 10;
+      width: 9.1% * 10.5;
       background: $purple4;
     }
     li:nth-of-type(2) {
-      width: 7.1% * 10;
+      width: 7.1% * 10.5;
       background: $purple3;
     }
     li:nth-of-type(3) {
-      width: 4.2% * 10;
+      width: 4.2% * 10.5;
       background: $purple2;
     }
     li:nth-of-type(4) {
-      width: 2.9% * 10;
+      width: 2.9% * 10.5;
       background: $purple1;
     }
   }
@@ -1385,16 +1385,16 @@ article {
       background: $purple4;
     }
     li:nth-of-type(2) {
-      width: 13% * 4.5;
+      width: 13% * 4.7;
       background: $purple3;
     }
     li:nth-of-type(3) {
-      width: 9% * 4.5;
+      width: 9% * 4.9;
       background: $purple2;
     }
     li:nth-of-type(4),
     li:nth-of-type(5) {
-      width: 8% * 4.7;
+      width: 8% * 5.2;
       background: $purple1;
     }
   }
@@ -1409,12 +1409,12 @@ article {
     }
     li:nth-of-type(3),
     li:nth-of-type(4) {
-      width: 2% * 8;
+      width: 2% * 8.2;
       background: $purple2;
     }
     li:nth-of-type(5),
     li:nth-of-type(6) {
-      width: 1% * 13;
+      width: 1% * 15;
       background: $purple1;
     }
   }
